--- a/public_site/index.html
+++ b/public_site/index.html
@@ -4,5 +4,24 @@
     <meta charset="UTF-8">
     <title>Lockbook</title>
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+    <link rel="stylesheet" href="styles.css">
   </head>
+  <body>
+    <div id="intro">
+      <span>
+        Child
+      </span>
+      <span id="intro-pic">
+        Child2  
+      </span>
+    </div>
+    <div id="intro">
+      <span>
+        Child
+      </span>
+      <span id="intro-pic">
+        Child2  
+      </span>
+    </div>
+  </body>
 </html>
