--- a/public_site/index.html
+++ b/public_site/index.html
@@ -4,22 +4,41 @@
     <meta charset="UTF-8">
     <title>Lockbook</title>
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap" rel="stylesheet">
+    <meta name='viewport'
+     content='width=device-width, initial-scale=1.0, maximum-scale=1.0,
+     user-scalable=0' >
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <div id="intro">
-      <span>
-        Child
+    <div class="container">
+     <span class="left">
+        <div class="centered">
+          <div class="content">
+            <h1 id="text">LOCKBOOK</h1>
+            <h3>The best place to store and share thoughts</h3>
+            <p>
+            Privacy shouldn’t be a compromise. That’s why we made Lockbook, a companion for recording thoughts on all your devices. Record, sync, and share your notes with apps engineered to feel like home on every platform. We collect no personal information and encrypt your notes so even we can’t see them. Don’t take our word for it: Lockbook is 100% open-source.
+            </p>
+          </div>
+        </div>
+      </span> 
+      <span class="right">
+        <div class="centered">
+          <div class="content">
+            <img style='height: 100%; width: 100%; object-fit: contain' src="https://lockbook.net/images/screenshots.png">
+          </div>
+        </div>
       </span>
-      <span id="intro-pic">
-        Child2  
-      </span>
+      
     </div>
-    <div id="intro">
-      <span>
+    <div class="container">
+      <span class="left">
         Child
       </span>
-      <span id="intro-pic">
+      <span class="right">
         Child2  
       </span>
     </div>
