--- a/public_site/index.html
+++ b/public_site/index.html
@@ -32,15 +32,27 @@
           </div>
         </div>
       </span>
-      
     </div>
     <div class="container">
-      <span class="left">
-        Child
-      </span>
+     <span class="left">
+        <div class="centered">
+          <div class="content">
+            <h3>Polished</h3>
+            <p>
+            We built Lockbook for everyday use because we use Lockbook everyday. We need a note-taking app that doesn't make trade-offs with respect to speed, stability, efficiency, device integration, or delightfulness. The only way to have that is put in the effort, including writing native apps for every platform, and we can't wait for you to try it.
+            </p>
+          </div>
+        </div>
+      </span> 
       <span class="right">
-        Child2  
+        <div class="centered">
+          <div class="content">
+            <img style='height: 100%; width: 100%; object-fit: contain' src="https://lockbook.net/images/screenshots.png">
+          </div>
+        </div>
       </span>
     </div>
+    <div class="container">
+
   </body>
 </html>
