nice ipad screenshot

--- a/public_site/index.html
+++ b/public_site/index.html
@@ -28,7 +28,7 @@
       <span class="right">
         <div class="centered">
           <div class="content">
-            <img style='height: 100%; width: 100%; object-fit: contain' src="https://lockbook.net/images/screenshots.png">
+            <img style='height: 100%; width: 100%; object-fit: contain' src="intro.png">
           </div>
         </div>
       </span>
