--- a/public_site/index.html
+++ b/public_site/index.html
@@ -21,8 +21,7 @@
 						<h1 id="text">LOCKBOOK</h1>
 						<h3>The best place to store and share thoughts</h3>
 						<p>
-							Privacy shouldn’t be a compromise. That’s why we made Lockbook, a companion for recording
-							thoughts on all your devices. Record, sync, and share your notes with apps engineered to
+							Privacy shouldn’t be a compromise. That’s why we made Lockbook, a secure companion to record, sync, and share your thoughts with apps engineered to
 							feel like home on every platform. We collect no personal information and encrypt your notes
 							so even we can’t see them. Don’t take our word for it: Lockbook is 100% open-source.
 						</p>
