--- a/public_site/index.html
+++ b/public_site/index.html
@@ -245,7 +245,7 @@
 						<h2>Developer Friendly
 </h2>
 						<p>
-						The Lockbook CLI will right into your favorite chain of piped-together unix commands. Search
+						The Lockbook CLI will fit right into your favorite chain of piped-together unix commands. Search
 							your notes with fzf, edit them with vim, and schedule backups with cron. When scripting
 							doesn't cut it, use our Rust library for a robust programmatic interface with Lockbook.
 						</p>
