--- a/public_site/index.html
+++ b/public_site/index.html
@@ -247,7 +247,7 @@
 						<p>
 						The Lockbook CLI will fit right into your favorite chain of piped-together unix commands. Search
 							your notes with fzf, edit them with vim, and schedule backups with cron. When scripting
-							doesn't cut it, use our Rust library for a robust programmatic interface with Lockbook.
+							doesn't cut it, use our Rust library for a robust programmatic interface.
 						</p>
 					</div>
 				</div>
