public_site: fix images

--- a/public_site/index.html
+++ b/public_site/index.html
@@ -78,7 +78,7 @@
 				<div class="centered">
 					<div class="content">
 						<img style='height: 100%; width: 100%; object-fit: contain'
-							 src="https://lockbook.net/images/screenshots.png">
+							 src="screenshots.png">
 					</div>
 				</div>
 			</span>
