docs: misc fixes (#1203)
* fixes: #1019

* fixes: #1197

* fixes: #1018

* fixes: #990

--- a/public_site/index.html
+++ b/public_site/index.html
@@ -21,9 +21,10 @@
 						<h1 id="text">LOCKBOOK</h1>
 						<h3>The best place to store and share thoughts</h3>
 						<p>
-							Privacy shouldn’t be a compromise. That’s why we made Lockbook, a secure companion to record, sync, and share your thoughts with apps engineered to
-							feel like home on every platform. We collect no personal information and encrypt your notes
-							so even we can’t see them. Don’t take our word for it: Lockbook is 100% open-source.
+							Privacy shouldn’t be a compromise. That’s why we made Lockbook, a secure companion to record,
+							sync, and share your thoughts with apps engineered to feel like home on every platform. We
+							collect no personal information and encrypt your notes so even we can’t see them. Don’t take
+							our word for it: <a class="link" target="_blank" href="https://github.com/lockbook/lockbook">Lockbook is 100% open-source</a>.
 						</p>
 					</div>
 				</div>
@@ -49,23 +50,23 @@
 						</p>
 						<div class="icons">
 							<span>
-								<a id="term-icon" target="_blank"
+								<a class="button" id="term-icon" target="_blank"
 								   href="https://github.com/lockbook/lockbook/blob/master/docs/guides/install/cli.md">
 									<i class="fas fa-terminal"></i>
 								</a>
-								<a id="apple-icon" target="_blank"
-								   href="https://github.com/lockbook/lockbook/blob/master/docs/guides/install/cli.md">
+								<a class="button" id="apple-icon" target="_blank"
+								   href="https://github.com/lockbook/lockbook/blob/master/docs/guides/install/iOS-iPadOS.md">
 									<i class="fab fa-apple"></i>
 								</a>
-								<a id="windows-icon" target="_blank"
+								<a class="button" id="windows-icon" target="_blank"
 								   href="https://github.com/lockbook/lockbook/blob/master/docs/guides/install/windows.md">
 									<i class="fab fa-windows"></i>
 								</a>
-								<a id="android-icon" target="_blank"
+								<a class="button" id="android-icon" target="_blank"
 								   href="https://github.com/lockbook/lockbook/blob/master/docs/guides/install/android.md">
 									<i class="fab fa-android"></i>
 								</a>
-								<a id="linux-icon" target="_blank"
+								<a class="button" id="linux-icon" target="_blank"
 								   href="https://github.com/lockbook/lockbook/blob/master/docs/guides/install/linux.md">
 									<i class="fab fa-linux"></i>
 								</a>
@@ -256,16 +257,28 @@
 				<div class="centered">
 					<div class="content">
 						<p class="dev-p">
-							<i class="dev-icon fas fa-terminal"></i>Automate your workflow with our CLI.
+							<i class="dev-icon fas fa-terminal"></i>
+								<a class="link" target="_blank" href="https://github.com/lockbook/lockbook/blob/master/clients/cli/src/main.rs#L34">
+									Automate your workflow with our CLI.
+								</a>
 						</p>
 						<p class="dev-p">
-							<i class="dev-icon fas fa-stream"></i>Edit your notes in your favorite text editor.
+							<i class="dev-icon fas fa-stream"></i>
+								<a class="link" target="_blank" href="https://github.com/lockbook/lockbook/blob/master/clients/cli/src/utils.rs#L15">
+									Edit your notes in your favorite text editor.
+								</a>
 						</p>
 						<p class="dev-p">
-							<i class="dev-icon fab fa-rust"></i>Use our core library from any programming language.
+							<i class="dev-icon fab fa-rust"></i>
+								<a class="link" target="_blank" href="https://github.com/lockbook/lockbook/blob/master/core/src/lib.rs#L91">
+									Use our core library from any programming language.
+								</a>
 						</p>
 						<p class="dev-p">
-							<i class="dev-icon fab fa-github"></i>Contribute to our source code.
+							<i class="dev-icon fab fa-github"></i>
+							<a class="link" target="_blank" href="https://github.com/lockbook/lockbook">
+								Contribute to our source code.
+							</a>
 						</p>
 					</div>
 				</div>
