--- a/public_site/index.html
+++ b/public_site/index.html
@@ -19,7 +19,7 @@
 				<div class="centered">
 					<div class="content">
 						<h1 id="text">LOCKBOOK</h1>
-						<h3>The best place to store and share thoughts</h3>
+						<h3>The private, polished note-taking platform.</h3>
 						<p>
 							Privacy shouldn’t be a compromise. That’s why we made Lockbook, a secure companion to record,
 							sync, and share your thoughts with apps engineered to feel like home on every platform. We
