--- a/public_site/index.html
+++ b/public_site/index.html
@@ -86,9 +86,8 @@
 			</span>
 			<span class="right">
 				<div class="centered">
-					<div class="content">
-						<img style='height: 100%; width: 100%; object-fit: contain'
-							 src="screenshots.png">
+					<div class="content mockup-img-container">
+						<img id = "mockup-img" >
 					</div>
 				</div>
 			</span>
