--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -33,7 +33,8 @@
         <p>Your username is visible to us in plain text.</p>
         <p>File names &amp; documents are encrypted so only you or your collaborators can see them. We can see the size
             of your documents after they’ve been compressed and encrypted.</p>
-        <p>We can see the shape of your file tree we know when a file is updated. We can tell which version of the code
+        <p>We can see the shape of your file tree, and we know when a file is updated. We can tell which version of the
+            code
             you’re running.</p>
         <p>When you sign up for our premium tiers, some information is sent to a payment processor, and we only store
             the ids that the payment processor replies with.</p>
