--- a/public_site/eula.html
+++ b/public_site/eula.html
@@ -36,11 +36,14 @@
             accounts engaging in malicious usage of our server.</p>
         <p>You may not juggle multiple free accounts to avoid paying for our free tier. If your premium account enters a
             delinquent state, files in the premium tier are subject to deletion.</p>
-        <p>All software written by Lockbook is released under the <a href="unlicense.org">Unlicense license</a>. A copy
+        <p>All software written by Lockbook is released under the <a href="https://unlicense.org/">Unlicense
+                license</a>. A copy
             of it is attached at the bottom of this agreement.</p>
-        <p>Any data transmitted to Lockbook servers are outlined in our <a href="privacy-policy.md">privacy policy</a>.
+        <p>Any data transmitted to Lockbook servers are outlined in our <a
+                href="/privacy-policy">privacy policy</a>.
             Lockbook will only engage with authorities when ordered to by a court that has jurisdiction over our
-            employees, see our <a href="canary.md">annual warrant canary</a>. All source code is open source and <a
+            employees, see our <a href="https://github.com/lockbook/lockbook/blob/master/docs/canary.md">annual warrant
+                canary</a>. All source code is open source and <a
                 href="https://github.com/lockbook/lockbook">auditable</a> by the public.</p>
         <p class="code">The Unlicense</p>
         <p class="code">This is free and unencumbered software released into the public domain. Anyone is free to copy,
