--- a/public_site/tos.html
+++ b/public_site/tos.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Lockbook - EULA</title>
+    <title>Lockbook - TOS</title>
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,8 +27,8 @@
     </nav>
 
     <article id="eula">
-        <h1 id="end-user-license-agreement">End User License Agreement</h1>
-        <p>This End-User License Agreement is a legal agreement between you and Lockbook LLC regarding your use of
+        <h1 id="end-user-license-agreement">Terms of Service</h1>
+        <p>This is a legal agreement between you and Lockbook LLC regarding your use of
             Lockbook’s Servers. You agree to this policy by creating an account on our server.</p>
         <p>An account’s data or private keys cannot be recovered by Lockbook staff. Lockbook servers can undergo
             maintenance at any time. In the rare event of a failure, Lockbook’s server administrators may need to delete
