--- a/tos.html
+++ b/tos.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Lockbook - EULA</title>
+    <title>Lockbook - TOS</title>
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,8 +27,8 @@
     </nav>
 
     <article id="eula">
-        <h1 id="end-user-license-agreement">End User License Agreement</h1>
-        <p>This End-User License Agreement is a legal agreement between you and Lockbook LLC regarding your use of
+        <h1 id="end-user-license-agreement">Terms of Service</h1>
+        <p>This is a legal agreement between you and Lockbook LLC regarding your use of
             Lockbook’s Servers. You agree to this policy by creating an account on our server.</p>
         <p>An account’s data or private keys cannot be recovered by Lockbook staff. Lockbook servers can undergo
             maintenance at any time. In the rare event of a failure, Lockbook’s server administrators may need to delete
@@ -36,11 +36,14 @@
             accounts engaging in malicious usage of our server.</p>
         <p>You may not juggle multiple free accounts to avoid paying for our free tier. If your premium account enters a
             delinquent state, files in the premium tier are subject to deletion.</p>
-        <p>All software written by Lockbook is released under the <a href="unlicense.org">Unlicense license</a>. A copy
+        <p>All software written by Lockbook is released under the <a href="https://unlicense.org/">Unlicense
+                license</a>. A copy
             of it is attached at the bottom of this agreement.</p>
-        <p>Any data transmitted to Lockbook servers are outlined in our <a href="privacy-policy.md">privacy policy</a>.
+        <p>Any data transmitted to Lockbook servers are outlined in our <a
+                href="/privacy-policy">privacy policy</a>.
             Lockbook will only engage with authorities when ordered to by a court that has jurisdiction over our
-            employees, see our <a href="canary.md">annual warrant canary</a>. All source code is open source and <a
+            employees, see our <a href="https://github.com/lockbook/lockbook/blob/master/docs/canary.md">annual warrant
+                canary</a>. All source code is open source and <a
                 href="https://github.com/lockbook/lockbook">auditable</a> by the public.</p>
         <p class="code">The Unlicense</p>
         <p class="code">This is free and unencumbered software released into the public domain. Anyone is free to copy,
